# ds-mkdocs

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  mkdocs-docs.properties.json
blog/: index.html
