[project]
name = "ds-mkdocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material>=9.6.11",
    "mkdocs>=1.6.1",
    "mkdocs-material-extensions>=1.3.1",
    "pymdown-extensions>=10.14.3",
    "mike>=2.1.3",
]
